# rp2040-flake

./: README.md  flake.nix
templates/pico-sdk-project/: .envrc  CMakeLists.txt  flake.nix
templates/pico-sdk-project/src/: main.c
